...
            }

            item {
                OutlinedTextField(
                    value = email,
                    onValueChange = { email = it },
                    modifier = Modifier.testTag("email_field")
                        .fillMaxWidth()
                        .padding(horizontal = 15.dp),
                    shape = RoundedCornerShape(15.dp),
                    placeholder = { Text("Enter your email") },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
                    colors = TextFieldDefaults.colors(
...
                                    painterResource(R.drawable.baseline_visibility_24),
                                contentDescription = null
                            )
                        }
                    },
                    visualTransformation = if (passwordvisibility) VisualTransformation.None else PasswordVisualTransformation(),
                    modifier = Modifier.testTag("password_field")
                        .fillMaxWidth()
                        .padding(horizontal = 15.dp),
                    shape = RoundedCornerShape(15.dp),
                    placeholder = { Text("Enter your password") },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
                    colors = TextFieldDefaults.colors(
...
                            } else {
                                AppUtil.showToast(context, errorMessage ?: "Login failed.")
                            }
                        }
                    },
                    enabled = !isLoading, // PREVENT CLICKING WHILE LOADING
                    modifier = Modifier.testTag("login_button")
                        .fillMaxWidth()
                        .padding(horizontal = 15.dp)
                        .height(60.dp)
                        .background(
                            brush = Brush.horizontalGradient(colors = ButtonColor),
                            shape = RoundedCornerShape(15.dp)
...
                        color = Blue
                    )
                    Text(
                        text = "Sign Up",
                        color = Green,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier.testTag("go_to_registration")
                            .clickable(enabled = !isLoading) {
                                context.startActivity(Intent(context, RegistrationActivity::class.java))
                            }
                            .padding(3.dp)
                    )
                }
...
